@@ -104,6 +104,7 @@ import ca.uhn.fhir.rest.server.servlet.ServletRequestDetails;
 import ca.uhn.fhir.rest.server.util.CompositeInterceptorBroadcaster;
 import ca.uhn.fhir.rest.server.util.ISearchParamRegistry;
 import ca.uhn.fhir.system.HapiSystemProperties;
+import ca.uhn.fhir.util.SearchParameterUtil;
 import ca.uhn.fhir.util.StopWatch;
 import ca.uhn.fhir.util.StringUtil;
 import ca.uhn.fhir.util.UrlUtil;
@@ -136,6 +137,7 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.transaction.support.TransactionSynchronizationManager;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -1764,9 +1766,12 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 
 			// Case 2:
 			Pair<String, Map<String, Object>> canonicalQuery =
-					buildCanonicalUrlQuery(findVersionFieldName, targetResourceTypes, reverseMode, theRequest);
+					buildCanonicalUrlQuery(findVersionFieldName, targetResourceTypes, reverseMode, theRequest, param);
 
-			String sql = localReferenceQuery + "UNION " + canonicalQuery.getLeft();
+			String sql = localReferenceQuery.toString();
+			if (canonicalQuery != null) {
+				sql = localReferenceQuery + "UNION " + canonicalQuery.getLeft();
+			}
 
 			Map<String, Object> limitParams = new HashMap<>();
 			if (maxCount != null) {
@@ -1801,7 +1806,9 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 							nextPartition.iterator().next().getPartitionId());
 				}
 				localReferenceQueryParams.forEach(q::setParameter);
-				canonicalQuery.getRight().forEach(q::setParameter);
+				if (canonicalQuery != null) {
+					canonicalQuery.getRight().forEach(q::setParameter);
+				}
 				limitParams.forEach(q::setParameter);
 
 				@SuppressWarnings("unchecked")
@@ -1972,7 +1979,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		CanonicalUrlTargets canonicalUrlTargets =
 				calculateIndexUriIdentityHashesForResourceTypes(theRequestDetails, null, theReverse);
 		List<List<String>> canonicalUrlPartitions = ListUtils.partition(
-				List.copyOf(theCanonicalUrls), getMaximumPageSize() - canonicalUrlTargets.myHashIdentityValues.size());
+				List.copyOf(theCanonicalUrls), getMaximumPageSize() - canonicalUrlTargets.hashIdentityValues.size());
 
 		sqlBuilder = new StringBuilder();
 		sqlBuilder.append("SELECT ");
@@ -1989,7 +1996,7 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 
 		for (Collection<String> nextCanonicalUrlList : canonicalUrlPartitions) {
 			TypedQuery<Object[]> canonicalResIdQuery = theEntityManager.createQuery(canonicalResSql, Object[].class);
-			canonicalResIdQuery.setParameter("hash_identity", canonicalUrlTargets.myHashIdentityValues);
+			canonicalResIdQuery.setParameter("hash_identity", canonicalUrlTargets.hashIdentityValues);
 			canonicalResIdQuery.setParameter("uris", nextCanonicalUrlList);
 			List<Object[]> results = canonicalResIdQuery.getResultList();
 			for (var next : results) {
@@ -2042,12 +2049,19 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		return targetResourceTypes;
 	}
 
-	@Nonnull
+	@Nullable
 	private Pair<String, Map<String, Object>> buildCanonicalUrlQuery(
 			String theVersionFieldName,
 			Set<String> theTargetResourceTypes,
 			boolean theReverse,
-			RequestDetails theRequest) {
+			RequestDetails theRequest,
+			RuntimeSearchParam theParam) {
+
+		String[] searchParameterPaths = SearchParameterUtil.splitSearchParameterExpressions(theParam.getPath());
+		if (!Arrays.stream(searchParameterPaths).anyMatch(t->referencePathCouldPotentiallyReferenceCanonicalElement(t, theParam))) {
+			return null;
+		}
+
 		String fieldsToLoadFromSpidxUriTable = theReverse ? "r.src_resource_id" : "rUri.res_id";
 		if (theVersionFieldName != null) {
 			// canonical-uri references aren't versioned, but we need to match the column count for the UNION
@@ -2079,16 +2093,16 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		canonicalUrlQuery.append("JOIN hfj_spidx_uri rUri ON (");
 		if (myPartitionSettings.isDatabasePartitionMode()) {
 			canonicalUrlQuery.append("rUri.partition_id IN (:uri_partition_id) AND ");
-			canonicalUriQueryParams.put("uri_partition_id", canonicalUrlTargets.myPartitionIds);
+			canonicalUriQueryParams.put("uri_partition_id", canonicalUrlTargets.partitionIds);
 		}
-		if (canonicalUrlTargets.myHashIdentityValues.size() == 1) {
+		if (canonicalUrlTargets.hashIdentityValues.size() == 1) {
 			canonicalUrlQuery.append("rUri.hash_identity = :uri_identity_hash");
 			canonicalUriQueryParams.put(
 					"uri_identity_hash",
-					canonicalUrlTargets.myHashIdentityValues.iterator().next());
+					canonicalUrlTargets.hashIdentityValues.iterator().next());
 		} else {
 			canonicalUrlQuery.append("rUri.hash_identity in (:uri_identity_hashes)");
-			canonicalUriQueryParams.put("uri_identity_hashes", canonicalUrlTargets.myHashIdentityValues);
+			canonicalUriQueryParams.put("uri_identity_hashes", canonicalUrlTargets.hashIdentityValues);
 		}
 		canonicalUrlQuery.append(" AND r.target_resource_url = rUri.sp_uri");
 		canonicalUrlQuery.append(")");
@@ -2139,47 +2153,31 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 						.values()
 						.stream()
 						.filter(t -> t.getParamType().equals(RestSearchParameterTypeEnum.REFERENCE))
-						.collect(Collectors.toList())) {
+						.toList()) {
 
-					// If the reference points to a Reference (ie not a canonical or CanonicalReference)
-					// then it doesn't matter here anyhow. The logic here only works for elements at the
-					// root level of the document (e.g. QuestionnaireResponse.subject or
-					// QuestionnaireResponse.subject.where(...)) but this is just an optimization
-					// anyhow.
-					if (next.getPath().startsWith(myResourceName + ".")) {
-						String elementName =
-								next.getPath().substring(next.getPath().indexOf('.') + 1);
-						int secondDotIndex = elementName.indexOf('.');
-						if (secondDotIndex != -1) {
-							elementName = elementName.substring(0, secondDotIndex);
+					String paths = next.getPath();
+					for (String path : SearchParameterUtil.splitSearchParameterExpressions(paths)) {
+
+						if (!referencePathCouldPotentiallyReferenceCanonicalElement(path, next)){
+							continue;
 						}
-						BaseRuntimeChildDefinition child =
-								myContext.getResourceDefinition(myResourceName).getChildByName(elementName);
-						if (child != null) {
-							BaseRuntimeElementDefinition<?> childDef = child.getChildByName(elementName);
-							if (childDef != null) {
-								if (childDef.getName().equals("Reference")) {
-									continue;
+
+						if (!next.getTargets().isEmpty()) {
+							// For each reference parameter on the resource type we're searching for,
+							// add all the potential target types to the list of possible target
+							// resource types we can look up.
+							for (var nextTarget : next.getTargets()) {
+								if (possibleTypes.contains(nextTarget)) {
+									targetResourceTypes.add(nextTarget);
 								}
 							}
+						} else {
+							// If we have any references that don't define any target types, then
+							// we need to assume that all enabled resource types are possible target
+							// types
+							targetResourceTypes.addAll(possibleTypes);
+							break;
 						}
-					}
-
-					if (!next.getTargets().isEmpty()) {
-						// For each reference parameter on the resource type we're searching for,
-						// add all the potential target types to the list of possible target
-						// resource types we can look up.
-						for (var nextTarget : next.getTargets()) {
-							if (possibleTypes.contains(nextTarget)) {
-								targetResourceTypes.add(nextTarget);
-							}
-						}
-					} else {
-						// If we have any references that don't define any target types, then
-						// we need to assume that all enabled resource types are possible target
-						// types
-						targetResourceTypes.addAll(possibleTypes);
-						break;
 					}
 				}
 			}
@@ -2209,18 +2207,65 @@ public class SearchBuilder implements ISearchBuilder<JpaPid> {
 		return new CanonicalUrlTargets(hashIdentityValues, partitionIds);
 	}
 
-	static class CanonicalUrlTargets {
+	/**
+	 * Just because a SearchParameter is a Reference SP, doesn't necessarily mean that it
+	 * can reference a canonical. So first we try to rule out the SP based on the path it
+	 * contains. This matters because a SearchParameter of type Reference can point to
+	 * a canonical element (in which case we need to _include any canonical targets). Or it
+	 * can point to a Reference element (in which case we only need to _include actual
+	 * references by ID).
+	 * <p>
+	 * This isn't perfect because there's really no definitive and comprehensive
+	 * way of determining the datatype that a SearchParameter or a FHIRPath point to. But
+	 * we do our best if the path is simple enough to just manually check the type it
+	 * points to, or if it ends in an explicit type declaration.
+	 * </p>
+	 */
+	private boolean referencePathCouldPotentiallyReferenceCanonicalElement(String thePath, RuntimeSearchParam theParam) {
 
-		@Nonnull
-		final Set<Long> myHashIdentityValues;
-
-		@Nonnull
-		final Set<Integer> myPartitionIds;
-
-		public CanonicalUrlTargets(@Nonnull Set<Long> theHashIdentityValues, @Nonnull Set<Integer> thePartitionIds) {
-			myHashIdentityValues = theHashIdentityValues;
-			myPartitionIds = thePartitionIds;
+		// If this path explicitly wants a reference and not a canonical, we can ignore it since we're
+		// only looking for canonicals here
+		if (thePath.endsWith(".ofType(Reference)")) {
+			return false;
 		}
+
+		int dotIdx = thePath.indexOf('.');
+		if (dotIdx >= 0) {
+			String resourceName = thePath.substring(0, dotIdx).trim();
+			if (!resourceName.isEmpty() && Character.isUpperCase(resourceName.charAt(0))) {
+
+				if (!theParam.getBase().isEmpty() && !theParam.getBase().contains(resourceName)) {
+					return false;
+				}
+
+				// If the reference points to a Reference (ie not a canonical or CanonicalReference)
+				// then it doesn't matter here anyhow. The logic here only works for elements at the
+				// root level of the document (e.g. QuestionnaireResponse.subject or
+				// QuestionnaireResponse.subject.where(...)) but this is just an optimization
+				// anyhow.
+				String elementName = thePath.substring(dotIdx + 1);
+				int secondDotIndex = elementName.indexOf('.');
+				if (secondDotIndex != -1) {
+					elementName = elementName.substring(0, secondDotIndex);
+				}
+				BaseRuntimeChildDefinition child =
+					myContext.getResourceDefinition(myResourceName).getChildByName(elementName);
+				if (child != null) {
+					BaseRuntimeElementDefinition<?> childDef = child.getChildByName(elementName);
+					if (childDef != null) {
+						if (childDef.getName().equals("Reference")) {
+							return false;
+						}
+					}
+				}
+
+			}
+		}
+
+		return true;
+	}
+
+	record CanonicalUrlTargets(@Nonnull Set<Long> hashIdentityValues, @Nonnull Set<Integer> partitionIds) {
 	}
 
 	/**
